force-app/main/default/objects/Branch__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <description>Branch Manager Name</description>
    <inlineHelpText>Branch Manager Name</inlineHelpText>
    <label>Branch Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>