force-app/main/default/objects/Branch__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>Branch Name</description>
    <label>Branch Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>