force-app/main/default/objects/Branch__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <description>Branch Number</description>
    <externalId>true</externalId>
    <label>Branch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>