force-app/main/default/objects/Branch__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Branch City</description>
    <inlineHelpText>Branch City</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>