force-app/main/default/objects/Branch__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Branch Country</description>
    <inlineHelpText>Branch Country</inlineHelpText>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>