force-app/main/default/objects/Branch__c/fields/IAA_Region__c.field-meta.xml
<CustomField>
    <fullName>IAA_Region__c</fullName>
    <label>IAA Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>