force-app/main/default/objects/Branch__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary Phone number for the Branch location</description>
    <inlineHelpText>Primary Phone number for the Branch location</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>