force-app/main/default/objects/Branch__c/fields/Prior_Year_Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Units_Sold__c</fullName>
    <label>Prior Year Units Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>