force-app/main/default/objects/Branch__c/fields/Prior_Year_Units_Sold_YTD__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Units_Sold_YTD__c</fullName>
    <label>Prior Year Units Sold (YTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>