force-app/main/default/objects/Branch__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - West</fullName>
            </value>
            <value>
                <fullName>2 - South Central</fullName>
            </value>
            <value>
                <fullName>3 - Midwest</fullName>
            </value>
            <value>
                <fullName>4 - Northeast</fullName>
            </value>
            <value>
                <fullName>5 - Southeast</fullName>
            </value>
            <value>
                <fullName>6 - Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>