force-app/main/default/objects/Branch__c/fields/Total_of_Vehicles_Sold_YTD__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Vehicles_Sold_YTD__c</fullName>
    <description>Total # Vehicles Sold (YTD)</description>
    <inlineHelpText>Total # Vehicles Sold (YTD)</inlineHelpText>
    <label>Total # of Vehicles Sold(YTD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>