force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Number__c</columns>
    <columns>Branch_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>